new subzone info for register zone prop
