# docs/swagger.yml
@@ -2746,6 +2746,8 @@ paths:
                         type: string
                       base_chainID:
                         type: string
+                      chainID:
+                        type: string
               stats:
                 type: object
                 properties:
@@ -3035,6 +3037,8 @@ paths:
                         authority:
                           type: string
                         base_chainID:
+                          type: string
+                        chainID:
                           type: string
               stats:
                 type: array
